--- a/.gitattributes
+++ b/.gitattributes
@@ -12,9 +12,11 @@ resources/schemas/dbscripts/postgresql/targetedms-0.16-0.17.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-0.17-0.18.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-0.18-0.19.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-0.20-0.21.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-0.21-0.22.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.19-0.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.20-0.21.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-0.21-0.22.sql -text
 resources/schemas/targetedms.xml -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
 src/org/labkey/targetedms/SkylineDocImporter.java -text
