--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 lib/sqlitejdbc-v056.jar -text
 /module.properties -text
 resources/schemas/dbscripts/postgresql/targetedms-0.00-0.01.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-0.00-12.20.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-0.11-0.12.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-0.12-0.13.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-0.13-0.14.sql -text
@@ -15,6 +16,7 @@ resources/schemas/dbscripts/postgresql/targetedms-0.20-0.21.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-0.21-0.22.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-0.22-0.23.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.00-0.01.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-0.00-12.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.19-0.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.20-0.21.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.21-0.22.sql -text
