--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,7 @@ resources/schemas/dbscripts/postgresql/targetedms-12.21-12.22.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.22-12.23.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.23-12.24.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.24-12.25.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-12.25-12.26.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.00-12.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.19-0.20.sql -text
@@ -31,6 +32,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-12.21-12.22.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.22-12.23.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.23-12.24.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.24-12.25.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-12.25-12.26.sql -text
 resources/schemas/targetedms.xml -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
 src/org/labkey/targetedms/SkylineDocImporter.java -text
@@ -55,6 +57,7 @@ src/org/labkey/targetedms/parser/AnnotatedEntity.java -text
 src/org/labkey/targetedms/parser/AreaRatio.java -text
 src/org/labkey/targetedms/parser/ChromInfo.java -text
 src/org/labkey/targetedms/parser/Chromatogram.java -text
+src/org/labkey/targetedms/parser/DataSettings.java -text
 src/org/labkey/targetedms/parser/Instrument.java -text
 src/org/labkey/targetedms/parser/Peptide.java -text
 src/org/labkey/targetedms/parser/PeptideAnnotation.java -text
