TargetedMS module: Changed targetedms.Runs table to hold a FK (DataId) to exp.data table's RowId column. Deleted the Path column from targetedms.Runs. DataId is now used to lookup a targetedms run's data file path. This was done to fix run deletion from the database. Targetedms runs were not getting deleted due to a mismatch (extra dot) in the paths stored in targetedms.Runs and exp.data tables.
SVN r22899 |2012-11-07 22:05:55 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@ resources/schemas/dbscripts/postgresql/targetedms-12.22-12.23.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.23-12.24.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.24-12.25.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.25-12.26.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-12.26-12.27.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.00-12.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-0.19-0.20.sql -text
@@ -33,6 +34,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-12.22-12.23.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.23-12.24.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.24-12.25.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.25-12.26.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-12.26-12.27.sql -text
 resources/schemas/targetedms.xml -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
 src/org/labkey/targetedms/SkylineDocImporter.java -text
