--- a/.gitattributes
+++ b/.gitattributes
@@ -66,6 +66,7 @@ src/org/labkey/targetedms/conflict/ConflictTransition.java -text
 src/org/labkey/targetedms/model/PrecursorChromInfoPlus.java -text
 src/org/labkey/targetedms/parser/AbstractAnnotation.java -text
 src/org/labkey/targetedms/parser/AnnotatedEntity.java -text
+src/org/labkey/targetedms/parser/AnnotationSetting.java -text
 src/org/labkey/targetedms/parser/AreaRatio.java -text
 src/org/labkey/targetedms/parser/ChromInfo.java -text
 src/org/labkey/targetedms/parser/Chromatogram.java -text
