Initial support for modification search based on unimod name - ext store parses the unimod.xml to populate the combo - search form UI complete - need to get XML reader to handle > 1 specified site for the unimod records
SVN r25354 |2013-03-23 15:22:04 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -207,3 +207,4 @@ webapp/TargetedMS/lorikeet_0.3/js/jquery.flot.js -text
 webapp/TargetedMS/lorikeet_0.3/js/jquery.flot.selection.js -text
 webapp/TargetedMS/lorikeet_0.3/js/peptide.js -text
 webapp/TargetedMS/lorikeet_0.3/js/specview.js -text
+webapp/TargetedMS/unimod/unimod.xml -text
