--- a/.gitattributes
+++ b/.gitattributes
@@ -26,6 +26,7 @@ resources/schemas/dbscripts/postgresql/targetedms-12.26-12.27.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.27-12.28.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.28-12.29.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-12.30-13.10.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-13.10-13.11.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.19-0.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.20-0.21.sql -text
@@ -43,6 +44,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-12.26-12.27.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.27-12.28.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.28-12.29.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-12.30-13.10.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-13.10-13.11.sql -text
 resources/schemas/targetedms.xml -text
 src/META-INF/targetedms/jars.txt -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
@@ -108,6 +110,7 @@ src/org/labkey/targetedms/parser/AnnotationSetting.java -text
 src/org/labkey/targetedms/parser/AreaRatio.java -text
 src/org/labkey/targetedms/parser/ChromInfo.java -text
 src/org/labkey/targetedms/parser/Chromatogram.java -text
+src/org/labkey/targetedms/parser/ChromatogramTran.java -text
 src/org/labkey/targetedms/parser/DataSettings.java -text
 src/org/labkey/targetedms/parser/Instrument.java -text
 src/org/labkey/targetedms/parser/Peptide.java -text
