--- a/.gitattributes
+++ b/.gitattributes
@@ -31,6 +31,7 @@ resources/schemas/dbscripts/postgresql/targetedms-12.30-13.10.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.10-13.11.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.12-13.13.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.13-13.14.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-13.14-13.15.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.19-0.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.20-0.21.sql -text
@@ -51,6 +52,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-12.30-13.10.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.10-13.11.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.12-13.13.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.13-13.14.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-13.14-13.15.sql -text
 resources/schemas/targetedms.xml -text
 src/META-INF/targetedms/jars.txt -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
