Restructure test & Git modules Make all module tests be separate IntelliJ modules that depend on the core test module Add .iml references to project for modules living on Git
SVN r31699 |2014-03-26 23:37:49 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -259,6 +259,7 @@ test/src/org/labkey/test/tests/TargetedMSGetDataAPITest.java -text
 test/src/org/labkey/test/tests/TargetedMSLibraryIrtTest.java -text
 test/src/org/labkey/test/tests/TargetedMSLibraryTest.java -text
 test/src/org/labkey/test/tests/TargetedMSTest.java -text
+test/test_targetedms.iml -text
 webapp/TargetedMS/images/ChromatogramLibraryScreenshot.png -text
 webapp/TargetedMS/images/Fragment.gif -text
 webapp/TargetedMS/images/Peptide.gif -text
