--- a/.gitattributes
+++ b/.gitattributes
@@ -49,6 +49,7 @@ resources/schemas/dbscripts/postgresql/targetedms-13.31-13.32.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.32-13.33.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.10-14.11.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.11-14.12.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-14.12-14.13.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.19-0.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.20-0.21.sql -text
@@ -83,6 +84,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-13.31-13.32.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.32-13.33.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.10-14.11.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.11-14.12.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-14.12-14.13.sql -text
 resources/schemas/targetedms.xml -text
 src/org/labkey/targetedms/IrtPeptide.java -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
