--- a/.gitattributes
+++ b/.gitattributes
@@ -51,6 +51,7 @@ resources/schemas/dbscripts/postgresql/targetedms-14.10-14.11.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.11-14.12.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.12-14.13.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.13-14.14.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-14.14-14.15.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-0.01.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.19-0.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.20-0.21.sql -text
@@ -87,6 +88,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-14.10-14.11.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.11-14.12.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.12-14.13.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.13-14.14.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-14.14-14.15.sql -text
 resources/schemas/targetedms.xml -text
 src/org/labkey/targetedms/IrtPeptide.java -text
 src/org/labkey/targetedms/SkylineBinaryDataHandler.java -text
