--- a/.gitattributes
+++ b/.gitattributes
@@ -48,6 +48,7 @@ resources/schemas/dbscripts/postgresql/targetedms-13.30-14.10.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.31-13.32.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-13.32-13.33.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.10-14.11.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-14.10-14.20.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.11-14.12.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.12-14.13.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-14.13-14.14.sql -text
@@ -85,6 +86,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-13.30-14.10.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.31-13.32.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-13.32-13.33.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.10-14.11.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-14.10-14.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.11-14.12.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.12-14.13.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-14.13-14.14.sql -text
