--- a/.gitattributes
+++ b/.gitattributes
@@ -187,7 +187,9 @@ src/org/labkey/targetedms/conflict/ConflictPrecursor.java -text
 src/org/labkey/targetedms/conflict/ConflictProtein.java -text
 src/org/labkey/targetedms/conflict/ConflictTransition.java -text
 src/org/labkey/targetedms/model/ExperimentAnnotations.java -text
+src/org/labkey/targetedms/model/PrecursorChromInfoLitePlus.java -text
 src/org/labkey/targetedms/model/PrecursorChromInfoPlus.java -text
+src/org/labkey/targetedms/model/PrecursorComparator.java -text
 src/org/labkey/targetedms/parser/AbstractAnnotation.java -text
 src/org/labkey/targetedms/parser/AnnotatedEntity.java -text
 src/org/labkey/targetedms/parser/AnnotationSetting.java -text
