--- a/.gitattributes
+++ b/.gitattributes
@@ -350,6 +350,7 @@ test/src/org/labkey/test/tests/TargetedMSLibraryIrtTest.java -text
 test/src/org/labkey/test/tests/TargetedMSLibraryTest.java -text
 test/src/org/labkey/test/tests/TargetedMSQCTest.java -text
 test/src/org/labkey/test/tests/TargetedMSTest.java -text
+test/src/org/labkey/test/util/targetedms/QCHelper.java -text
 test/test_targetedms.iml -text
 webapp/TargetedMS/css/LeveyJenningsReport.css -text
 webapp/TargetedMS/css/dropDown.css -text
