Spec 23574: Adjust plot height and width, add styling and hover text.
SVN r38840 |2015-07-21 00:47:49 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -330,6 +330,7 @@ test/src/org/labkey/test/tests/TargetedMSTest.java -text
 test/src/org/labkey/test/util/targetedms/QCHelper.java -text
 test/test_targetedms.iml -text
 webapp/TargetedMS/css/LeveyJenningsReport.css -text
+webapp/TargetedMS/css/ParetoPlot.css -text
 webapp/TargetedMS/css/dropDown.css -text
 webapp/TargetedMS/images/ChromatogramLibraryScreenshot.png -text
 webapp/TargetedMS/images/Fragment.gif -text
