TargetedMS: -- bug fix: CE and DP predictors associated with replicates were not getting parsed.    As a result, the cePredictorId and dbPredictorId columns in targetedms.replicate were not getting populated. -- Fixed which optimization peak gets annotated with the retention time annotation when displaying optimization peak chromatograms.
SVN r42197 |2016-02-03 22:12:42 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -223,6 +223,7 @@ src/org/labkey/targetedms/parser/SampleFile.java -text
 src/org/labkey/targetedms/parser/SkylineBinaryParser.java -text
 src/org/labkey/targetedms/parser/SkylineDocumentParser.java -text
 src/org/labkey/targetedms/parser/SkylineEntity.java -text
+src/org/labkey/targetedms/parser/SkylineReplicate.java -text
 src/org/labkey/targetedms/parser/Transition.java -text
 src/org/labkey/targetedms/parser/TransitionAnnotation.java -text
 src/org/labkey/targetedms/parser/TransitionAreaRatio.java -text
