Consolidate sql scripts and bump module versions to 16.10
SVN r42597 |2016-02-28 18:59:52 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -59,6 +59,7 @@ resources/schemas/dbscripts/postgresql/targetedms-15.10-15.20.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-15.20-15.21.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-15.20-15.30.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-15.30-15.31.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-15.30-16.10.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-15.31-15.32.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-15.32-15.33.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-15.33-15.34.sql -text
@@ -100,6 +101,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-15.10-15.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-15.20-15.21.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-15.20-15.30.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-15.30-15.31.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-15.30-16.10.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-15.31-15.32.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-15.32-15.33.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-15.33-15.34.sql -text
