--- a/.gitattributes
+++ b/.gitattributes
@@ -67,6 +67,7 @@ resources/schemas/dbscripts/postgresql/targetedms-15.33-15.34.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-15.34-15.35.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-15.35-15.36.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.10-16.11.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-16.10-16.20.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.12-16.13.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.13-16.14.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.14-16.15.sql -text
@@ -114,6 +115,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-15.33-15.34.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-15.34-15.35.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-15.35-15.36.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.10-16.11.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-16.10-16.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.11-16.12.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.12-16.13.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.13-16.14.sql -text
