--- a/.gitattributes
+++ b/.gitattributes
@@ -72,6 +72,7 @@ resources/schemas/dbscripts/postgresql/targetedms-16.12-16.13.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.13-16.14.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.14-16.15.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.20-16.21.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-16.20-16.30.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.21-16.22.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.22-16.23.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-16.23-16.24.sql -text
@@ -126,6 +127,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-16.12-16.13.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.13-16.14.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.14-16.15.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.20-16.21.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-16.20-16.30.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.21-16.22.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.22-16.23.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-16.23-16.24.sql -text
