--- a/.gitattributes
+++ b/.gitattributes
@@ -458,9 +458,11 @@ webapp/TargetedMS/images/blank.gif -text
 webapp/TargetedMS/images/spectrum.gif -text
 webapp/TargetedMS/jquery/jquery-1.8.3.min.js -text
 webapp/TargetedMS/js/BaseQCPlotPanel.js -text
+webapp/TargetedMS/js/CUSUMPlotHelper.js -text
 webapp/TargetedMS/js/ClustergrammerDialog.js -text
 webapp/TargetedMS/js/LeveyJenningsPlotHelper.js -text
 webapp/TargetedMS/js/LinkVersionsDialog.js -text
+webapp/TargetedMS/js/MovingRangePlotHelper.js -text
 webapp/TargetedMS/js/ParetoPlotPanel.js -text
 webapp/TargetedMS/js/QCPlotHelperBase.js -text
 webapp/TargetedMS/js/QCPlotHelperWrapper.js -text
