TargetedMS QC plot and Pareto plot export to PDF and PNG - change from using PDF webpart title menu button to using export icons shown on plot hover - updated/fix related tests to check for number of export icons and verify download of file
SVN r47776 |2016-11-21 15:25:23 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -437,6 +437,7 @@ webapp/TargetedMS/css/LeveyJenningsReport.css -text
 webapp/TargetedMS/css/LinkVersionsDialog.css -text
 webapp/TargetedMS/css/ParetoPlot.css -text
 webapp/TargetedMS/css/QCSummary.css -text
+webapp/TargetedMS/css/SVGExportIcon.css -text
 webapp/TargetedMS/css/dropDown.css -text
 webapp/TargetedMS/images/ChromatogramLibraryScreenshot.png -text
 webapp/TargetedMS/images/Fragment.gif -text
