Spec 29360: New document summary webpart
SVN r50172 |2017-03-31 16:59:47 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -516,6 +516,7 @@ webapp/TargetedMS/js/BaseQCPlotPanel.js -text
 webapp/TargetedMS/js/CUSUMPlotHelper.js -text
 webapp/TargetedMS/js/CalibrationCurve.js -text
 webapp/TargetedMS/js/ClustergrammerDialog.js -text
+webapp/TargetedMS/js/DocumentSummary.js -text
 webapp/TargetedMS/js/LeveyJenningsPlotHelper.js -text
 webapp/TargetedMS/js/LinkVersionsDialog.js -text
 webapp/TargetedMS/js/MovingRangePlotHelper.js -text
