--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ import org.labkey.gradle.util.BuildUtils;
 
 dependencies
 {
+   external 'com.google.protobuf:protobuf-java:3.2.0'
    BuildUtils.addLabKeyDependency(project: project, config: "compile", depProjectPath: ":server:modules:ms2", depProjectConfig: "apiCompile")
    BuildUtils.addLabKeyDependency(project: project, config: "jspCompile", depProjectPath: ":server:modules:ms2", depProjectConfig: "apiCompile")
+
 }
