--- a/.gitattributes
+++ b/.gitattributes
@@ -22,6 +22,8 @@ resources/queries/targetedms/FiguresOfMerit.query.xml -text
 resources/queries/targetedms/FiguresOfMerit.sql -text
 resources/queries/targetedms/FiguresOfMeritPivot.sql -text
 resources/queries/targetedms/FiguresOfMeritSummary.sql -text
+resources/queries/targetedms/MoleculeCalibrationCurve.query.xml -text
+resources/queries/targetedms/PeptideCalibrationCurve.query.xml -text
 resources/queries/targetedms/QCMetric_fwb.sql -text
 resources/queries/targetedms/QCMetric_fwhm.sql -text
 resources/queries/targetedms/QCMetric_lhRatio.sql -text
