Spec #32158: move PK styles out of core _table.scss and into PK specific css file - and a few other misc style updates to make the page match FOM panel and table styling
SVN r56149 |2018-01-26 17:45:12 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -557,6 +557,7 @@ webapp/TargetedMS/css/ExperimentAnnotations.css -text
 webapp/TargetedMS/css/FiguresOfMerit.css -text
 webapp/TargetedMS/css/LinkVersionsDialog.css -text
 webapp/TargetedMS/css/ParetoPlot.css -text
+webapp/TargetedMS/css/Pharmacokinetics.css -text
 webapp/TargetedMS/css/QCSummary.css -text
 webapp/TargetedMS/css/SVGExportIcon.css -text
 webapp/TargetedMS/css/dropDown.css -text
