TargetedMS: Increase length of Value column in targetedms.ReplicateAnnotation
SVN r56632 |2018-02-22 20:53:38 +0000

--- a/.gitattributes
+++ b/.gitattributes
@@ -116,6 +116,7 @@ resources/schemas/dbscripts/postgresql/targetedms-17.10-17.20.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-17.20-17.30.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-17.21-17.22.sql -text
 resources/schemas/dbscripts/postgresql/targetedms-17.30-17.31.sql -text
+resources/schemas/dbscripts/postgresql/targetedms-17.31-17.32.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.20.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-12.30.sql -text
 resources/schemas/dbscripts/sqlserver/obsolete/targetedms-0.00-13.10.sql -text
@@ -188,6 +189,7 @@ resources/schemas/dbscripts/sqlserver/targetedms-17.10-17.20.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-17.20-17.30.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-17.21-17.22.sql -text
 resources/schemas/dbscripts/sqlserver/targetedms-17.30-17.31.sql -text
+resources/schemas/dbscripts/sqlserver/targetedms-17.31-17.32.sql -text
 resources/schemas/targetedms.xml -text
 src/ChromatogramGroupData.proto -text
 src/SkylineDocument.proto -text
